Examples/Monocular/compiling_error.txt
/Users/wmh/work/ORB_SLAM2_wmh/Examples/Monocular/mono_tum.cc:29:9: fatal error: 'opencv2/core/core.hpp' file not found
#include<opencv2/core/core.hpp>
        ^
1 error generated.
